More beautification, fixed gap issues with photos, various content mods

--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -59,6 +59,10 @@ section .header {
 .section-padding {
   padding: $section-padding;
 }
+
+.photo-padding {
+  height: 150px;
+}
 .section-border {
   border-bottom: 1px solid $keyline-color;
 }
